--- a/src/components/Faq.css
+++ b/src/components/Faq.css
@@ -1,7 +1,8 @@
 .faq{
     background: linear-gradient(rgba(100,100,104,0.7),rgba(100,100,104,0.7)),url(../assets/back-2.jpg) no-repeat center top;
     color: rgb(255,255,255);
-    height: 900px;
+    min-height: 900px;
+
 }
 
 .heading-faq > h1 {
