--- a/src/components/Navba.css
+++ b/src/components/Navba.css
@@ -1,5 +1,17 @@
 nav{
 	min-width: 100%;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 14px;
+}
+
+.navbar-brand{
+	width: 50%;
+	height: 50%;
+}
+
+.logo{
+	width: 50%;
+	height: 50%;
 }
 
 .navbar-nav ul li{
