--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,22 +1,13 @@
 
   .banner-section .opacity-shadow{
     background: rgba(100,100,104,0.5);
-    display:inline-block;
-    position:absolute;
+    position:fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index:10;
 }
 
-.banner-section{
-  display: inline-block;
+.carousel .img-fluid{
   width:100%;
-  margin-bottom: 50px;
-}
-
-.banner-section button .main-button{
-  float:center;
-  margin-top: 10px;
 }
