--- a/src/components/Navba.css
+++ b/src/components/Navba.css
@@ -4,14 +4,8 @@ nav{
 	font-size: 14px;
 }
 
-.navbar-brand{
-	width: 50%;
-	height: 50%;
-}
-
-.logo{
-	width: 50%;
-	height: 50%;
+body nav .brand{
+	color:white;
 }
 
 .navbar-nav ul li{
