--- a/src/components/TimeLine.css
+++ b/src/components/TimeLine.css
@@ -1,8 +1,9 @@
 .time-line-block{
     background: linear-gradient(rgba(100,100,104,0.7),rgba(100,100,104,0.7)),url(../assets/back-1.jpg) repeat center top;
+    background-size: 100%;
     color: rgb(255,255,255);
     min-width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: inline-block;
 }
 
