--- a/src/components/Navba.css
+++ b/src/components/Navba.css
@@ -4,14 +4,12 @@ nav{
 	font-size: 14px;
 }
 
-body nav .brand{
-	color:white;
-}
 
 .navbar-nav ul li{
 	display:inline-block;
 	margin: .5em 1em 0;
 	}
+
 .navbar-nav ul li a{
 	color:#97999B;
 	font-size:17px;
@@ -27,3 +25,9 @@ body nav .brand{
 	padding: 1.4em 0 0;
 	border-top: 3px solid #5DC9C9;
 	}
+
+@media (max-width: 700px){
+	.navbar-header{
+		display: none;
+	}
+}
